--- a/index.html
+++ b/index.html
@@ -92,14 +92,13 @@
         <div class="container-fluid">
             <hr>
             <p class="small">
-                Developed by:<br>
+                Original version developed by:<br>
                 MT Roth MD<br>
                 MY Chen MD PhD<br>
                 AK Haj MD PhD<br>
                 PA Brunker MD DPhil<br>
                 KN Ruby DO MPH
             </p>
-            <p class="small">v1.6 Jan. 2025</p>
         </div>
     </footer>
 
